--- a/aboutus.html
+++ b/aboutus.html
@@ -90,14 +90,30 @@
                         <h3>PhD. Diep Quynh Nhu</h3>                        
                         <div class="row">
                             <div class="col-lg-6">
-                                I am a researcher in the field of Renewable Energy Development (Bioethanol, Biogas), enzyme activities and applying bio-products (enzyme, microorganism) in environmental treatment, food processing, and feed additives with 20 years of experience. My major is Biochemistry, I was granted a Doctor degree by Hiroshima University, Japan in 2014. I used to work at Institute of Tropical Biology, VAST (2000-2007), Biomass Technology Research Center-AIST, Hiroshima, Japan (2008-2012), 株式会社建設環境研究所, Tokyo (2012-2016). Recently I have successfully developed an enzyme cocktail for pretreatment of cellulosic biomass (sawdust, cotton, agricultural waste). I have a keen interest in promoting the use of this product in mushroom cultivation, boosting the use of other enzyme group, probiotics in environmental treatment, Agriculture, Aquaculture, Food processing, husbandry sectors and be an active technical consultant based on my expertise.
+                                I am a researcher in the field of bioethanol production, enzyme solutions in woody biomass processing with over 20 years of experience. My major is Biochemistry, I was granted a Doctor degree by Hiroshima University, Japan in 2014. I used to work at Institute of Tropical Biology, VAST (2000-2007), Biomass Technology Research Center-AIST, Hiroshima, Japan (2008-2012), 株式会社建設環境研究所, Tokyo (2012-2016). Recently I have successfully created an enzyme formula for pre-treatment of cellulosic biomass (sawdust, cotton,…). Promoting the use of this enzyme formula in mushroom cultivation is my top concern for a remarkable technical progress in Mushroom industry in Vietnam. Besides, I have been a pioneer in enzyme solutions in a wide range of sectors, especially in Environmental treatment, Agriculture, Aquaculture, Food processing, Husbandry sectors and be an active technical consultant based on my expertise.
                             </div>
                             <div class="col-lg-6">
-                                Là nghiên cứu viên hoạt động trong  lĩnh vực  năng lượng tái tạo (cồn sinh học, biogas), nghiên cứu hoạt tính của enzyme và ứng dụng các chế phẩm sinh học (enzyme, vi sinh) trong xử lý môi trường và chế biến thực phẩm, bổ sung thức ăn gia súc với 20 năm kinh nghiệm. Chuyên ngành của tôi là Hóa sinh, được Đại học Hiroshima, Nhật Bản cấp bằng Tiến sĩ năm 2014. Tôi từng công tác tại Viện Sinh học nhiệt đới, VAST (2000-2007), Trung tâm Nghiên cứu Công nghệ Sinh khối-AIST, Hiroshima, Nhật Bản (2008-2012) ), 株式会社 建設 環境 研究所, Tokyo (2012-2016). Gần đây tôi đã phát triển thành công sản phẩm cocktail enzyme để tiền xử lý cơ chất giàu cellulose (mùn cưa, bông, phế thải nông nghiệp). Tôi quan tâm đến việc thúc đẩy việc sử dụng sản phẩm này trong trồng nấm, đẩy mạnh sử dụng các nhóm enzym khác, các chế phẩm sinh học trong xử lý môi trường, Nông nghiệp, Nuôi trồng thủy sản, Chế biến thực phẩm, Chăn nuôi và là một nhà tư vấn kỹ thuật tích cực dựa trên lĩnh vực chuyên môn sâu về Hóa sinh, Vi sinh.
+                                Tôi là người làm công tác nghiên cứu trong lĩnh vực sản xuất cồn sinh học, các giải pháp  enzyme trong xử lý sinh khối gỗ với hơn 20 năm kinh nghiệm. Chuyên ngành của tôi là Hóa sinh, được Đại học Hiroshima, Nhật Bản cấp bằng Tiến sĩ năm 2014. Tôi từng công tác tại Viện Sinh học Nhiệt đới, Viện Hàn lâm Khoa học và Công nghệ Việt Nam (2000-2007), Trung tâm Nghiên cứu Công nghệ Sinh khối-AIST, Hiroshima, Nhật Bản (2008-2012) ), 株式会社 建設 環境 研究所, Tokyo (2012-2016). Gần đây tôi đã thành công trong việc tạo ra công thức enzyme tổ hợp để xử lý sơ bộ sinh khối giàu xen lu lô (mùn cưa, bông,…). Thúc đẩy việc sử dụng công thức enzyme này trong trồng nấm là mối quan tâm hàng đầu để đạt được tiến bộ kỹ thuật vượt trội trong ngành Nấm tại Việt Nam. Ngoài ra, tôi là người tiên phong trong các giải pháp ứng dụng enzyme trong nhiều lĩnh vực, đặc biệt là trong lĩnh vực xử lý Môi trường, Nông nghiệp, Nuôi trồng thủy sản, Chế biến thực phẩm, Chăn nuôi và là một  người làm công tác tư vấn kỹ thuật tích cực thuộc  lĩnh vực chuyên môn.
                             </div>
                         </div>
                         </div>
                     </div>
+                    <div class="row padding">
+                        <div class="col-lg-3">
+                            <img class="profile" src="image/image4.jpg" alt="">
+                        </div>
+                        <div class="col-lg-9">
+                            <h3>Msc. Diep Le Chi</h3>                        
+                            <div class="row">
+                                <div class="col-lg-6">
+                                   <p> I am a lecturer at the Quang Binh University with over 14 years of experience in teaching and doing research in husbandry sector. In 2012, I was granted Master of Science degree by Hue University, since then I have done several studies related to applying enzyme, probiotics in animal feeds, livestock-environmental treatment, especially converting animal waste manure to value-added products such as compost fertilizer. Using enzyme, probiotics products as an additive in livestock feed and environmental treatment is an advanced technique, with many benefits. In a short time of digestion in intestine, additional enzymes from feed break down (hydrolyze) the food and help livestock to absorb maximum nutrients, save the amount of feedings, reduce bad odors, and alleviate the environmental pollution. Undoubtedly, applying enzymes, probiotics products in husbandry sector is inevitable for sustainable development of Agriculture in the future.</p>
+                                </div>
+                                <div class="col-lg-6">
+                                    Tôi là giảng viên trường Đại học Quảng Bình với hơn 14 năm kinh nghiệm giảng dạy và nghiên cứu trong lĩnh vực chăn nuôi. Năm 2012, tôi được Đại học Huế cấp bằng Thạc sĩ Khoa học, kể từ đó đã thực hiện một số nghiên cứu liên quan đến ứng dụng enzyme, vi sinh vật hữu ích trong thức ăn chăn nuôi, xử lý môi trường chăn nuôi, đặc biệt là chuyển đổi chất thải gia súc thành sản phẩm có giá trị như phân hữu cơ vi sinh. Sử dụng sản phẩm enzyme, vi sinh hữu ích làm chất phụ gia trong thức ăn chăn nuôi và xử lý môi trường là một kỹ thuật tiên tiến, mang lại nhiều lợi ích. Trong thời gian tiêu hóa ngắn ở đường ruột, enzym bổ sung từ thức ăn hỗ trợ thủy phân thức ăn giúp vật nuôi hấp thụ tối đa chất dinh dưỡng, tiết kiệm lượng thức ăn, giảm mùi hôi, giảm ô nhiễm môi trường. Không nghi ngờ gì nữa, việc ứng dụng các chế phẩm sinh học trong lĩnh vực chăn nuôi là tất yếu cho sự phát triển Nông nghiệp bền vững trong tương lai.
+                                </div>
+                            </div>
+                            </div>
+                        </div>
                     <div class="row padding">
                         <div class="col-lg-3">
                             <img class="profile" src="image/image7.png" alt="">
@@ -115,22 +131,6 @@
                             </div>
                             </div>
                         </div>
-                        <div class="row padding">
-                            <div class="col-lg-3">
-                                <img class="profile" src="image/image4.jpg" alt="">
-                            </div>
-                            <div class="col-lg-9">
-                                <h3>Msc. Diep Le Chi</h3>                        
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                       <p> I am a lecturer at the Quang Binh University with over 14 years of experience in teaching and doing research in husbandry sector. In 2012, I was granted Master of Science degree by Hue University, since then I have done several studies related to applying enzyme, probiotics in animal feeds, livestock-environmental treatment, especially converting animal waste manure to value-added products such as compost fertilizer. Using enzyme, probiotics products as an additive in livestock feed and environmental treatment is an advanced technique, with many benefits. In a short time of digestion in intestine, additional enzymes from feed break down (hydrolyze) the food and help livestock to absorb maximum nutrients, save the amount of feedings, reduce bad odors, and alleviate the environmental pollution. Undoubtedly, applying enzymes, probiotics products in husbandry sector is inevitable for sustainable development of Agriculture in the future.</p>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        Tôi là giảng viên trường Đại học Quảng Bình với hơn 14 năm kinh nghiệm giảng dạy và nghiên cứu trong lĩnh vực chăn nuôi. Năm 2012, tôi được Đại học Huế cấp bằng Thạc sĩ Khoa học, kể từ đó đã thực hiện một số nghiên cứu liên quan đến ứng dụng enzyme, vi sinh vật hữu ích trong thức ăn chăn nuôi, xử lý môi trường chăn nuôi, đặc biệt là chuyển đổi chất thải gia súc thành sản phẩm có giá trị như phân hữu cơ vi sinh. Sử dụng sản phẩm enzyme, vi sinh hữu ích làm chất phụ gia trong thức ăn chăn nuôi và xử lý môi trường là một kỹ thuật tiên tiến, mang lại nhiều lợi ích. Trong thời gian tiêu hóa ngắn ở đường ruột, enzym bổ sung từ thức ăn hỗ trợ thủy phân thức ăn giúp vật nuôi hấp thụ tối đa chất dinh dưỡng, tiết kiệm lượng thức ăn, giảm mùi hôi, giảm ô nhiễm môi trường. Không nghi ngờ gì nữa, việc ứng dụng các chế phẩm sinh học trong lĩnh vực chăn nuôi là tất yếu cho sự phát triển Nông nghiệp bền vững trong tương lai.
-                                    </div>
-                                </div>
-                                </div>
-                            </div>
                 </div>
               </div>
     
