--- a/contactVn.html
+++ b/contactVn.html
@@ -140,96 +140,32 @@
 			</div>
 		</nav>
 		<!-- Contact -->
-
-		<section class="u-align-center u-clearfix u-section-1" id="sec-1ac7">
-			<div class="u-clearfix u-sheet u-sheet-1">
-				<div
-					class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1"
-				>
-					<div class="u-gutter-0 u-layout">
-						<div class="u-layout-row row">
-							<div class="col-lg-12 padding">
-								<div class="u-layout-col">
-									<div
-										class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1"
-									>
-										<div class="u-container-layout u-container-layout-1">
-											<h2 class="u-text u-text-1">Enzyme Trồng Nấm</h2>
-											<p class="u-text u-text-2">
-												<span>Đỉa Chỉ:</span> Số 77, đường 26/3, thành phố Hà
-												Tĩnh, tỉnh Hà Tĩnh
-											</p>
-											<p class="u-text u-text-3">
-												<span>Số điện thoại:</span> +84 949 583 418
-											</p>
-											<p class="u-text u-text-4">
-												<span>Gmail:</span> diepquynhnhu@gmail.com
-											</p>
-										</div>
-									</div>
-									<!-- <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-2">
-                              <div class="u-container-layout u-valign-top u-container-layout-2">
-                                <div class="u-form u-form-1">
-                                  <form name="contactform"
-                                  action="contact-form-handler.php" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
-                                   style="padding: 10px" source="custom">
-                                    <div class="u-form-group u-form-name u-form-group-1">
-                                      <label for="name-5359" class="u-form-control-hidden u-label">Name</label>
-                                      <input type="text" placeholder="Name" id="name-5359" name="name"
-                                       class="u-border-1 u-border-grey-30 u-input u-input-rectangle" required="">
-                                    </div>
-                                    <div class="u-form-email u-form-group u-form-group-2">
-                                      <label for="email-5359" class="u-form-control-hidden u-label">Email</label>
-                                      <input type="email" placeholder="Email" id="email-5359" name="email" 
-                                      class="u-border-1 u-border-grey-30 u-input u-input-rectangle" required="">
-                                    </div>
-                                    <div class="u-form-group u-form-message u-form-group-3">
-                                      <label for="message-5359" class="u-form-control-hidden u-label">Message</label>
-                                      <textarea placeholder="Message" rows="4" cols="50" id="message-5359"
-                                       name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle" required=""></textarea>
-                                    </div>
-                                    <div class="u-form-group u-form-submit u-form-group-4">
-                                       <a href="#" class="u-btn u-btn-submit u-button-style">Submit</a>
-                                       <input type="submit" value="Submit" class="u-btn u-btn-submit u-button-style">
-                                    </div>
-                                    <div class="u-form-send-message u-form-send-success">Thank you! Your message has been sent.</div>
-                                    <div class="u-form-send-error u-form-send-message">Unable to send your message. Please fix errors then try again.</div>
-                                    <input type="hidden" value="" name="recaptchaResponse">
-                                   </form>
-                                </div>
-                              </div>
-                            </div>   -->
-								</div>
-							</div>
-							<div class="col-lg-12">
-								<div class="u-layout-col">
-									<div
-										class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-3"
-									>
-										<div class="u-container-layout u-container-layout-3">
-											<div class="u-expanded u-grey-light-2 u-map">
-												<div class="embed-responsive">
-													<iframe
-														class="embed-responsive-item"
-														src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3787.2960357926504!2d105.90643231502891!3d18.333774079645064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31384f0fb88e3ff9%3A0x2621d5c6c742168b!2zRW56eW1lIFRy4buTbmcgTuG6pW0!5e0!3m2!1sen!2s!4v1614176479477!5m2!1sen!2s"
-														width="600"
-														height="450"
-														style="border: 0"
-														allowfullscreen=""
-														loading="lazy"
-													></iframe>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+		<div class="container-fluid">
+			<div class="col-lg-12">
+				<h2 class="u-text u-text-1">Enzyme Trồng Nấm</h2>
+				<p class="u-text u-text-2">
+					<span>Đỉa Chỉ:</span> Số 77, đường 26/3, thành phố Hà Tĩnh, tỉnh Hà
+					Tĩnh
+				</p>
+				<p class="u-text u-text-3">
+					<span>Số điện thoại:</span> +84 949 583 418
+				</p>
+				<p class="u-text u-text-4">
+					<span>Gmail:</span> diepquynhnhu@gmail.com
+				</p>
 			</div>
-		</section>
-
+			<div class="col-lg-12">
+				<iframe
+					class="embed-responsive-item"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3787.2960357926504!2d105.90643231502891!3d18.333774079645064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31384f0fb88e3ff9%3A0x2621d5c6c742168b!2zRW56eW1lIFRy4buTbmcgTuG6pW0!5e0!3m2!1sen!2s!4v1614176479477!5m2!1sen!2s"
+					width="600"
+					height="450"
+					style="border: 0"
+					allowfullscreen=""
+					loading="lazy"
+				></iframe>
+			</div>
+		</div>
 		<!--- Footer -->
 		<footer>
 			<div class="container-fluid" style="background: #1f1f1f">
