--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
             <br />
         
             <div class="" id="accordion">
-                <div class="faqHeader">Frequently Asking Questions</div>
+                <div class="faqHeader">Frequently Asked Questions</div>
                 <div class="card ">
                     <div class="card-header card-custom card-custom">
                         <h4 class="card-header card-custom">
