--- a/indexVn.html
+++ b/indexVn.html
@@ -94,6 +94,11 @@
     <!-- <h4>What we offer</h4> -->
     <br>
     <div class="row">
+        <div class="col-sm-12 padding">
+            <img src="image/158401556_171838198083013_7970955751735975800_n.png" alt="">
+        </div>
+    </div>
+    <div class="row">
       <div class="col-sm-4">
         <img src="image/image1.gif" alt="">
       </div>
